--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "monsta-friends",
-  "homepage": "https://atoder.github.io/monsta-friends",
+  "name": "monstafriends",
+  "homepage": "https://atoder.github.io/monstafriends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,7 +10,9 @@
     "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
     "tachyons": "^4.12.0"
   },
   "scripts": {
